# kloc-reference-project-php

./: .dockerignore  .env  .gitignore  CLAUDE.md  README.md  composer.json  docker-compose.yml
config/: reference.php  routes.yaml  services.yaml
contract-tests/: .gitignore  CLAUDE.md  Dockerfile  TESTS.md  composer.json  config.php  docker-compose.yml  phpunit.xml
contract-tests-e2e/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
contract-tests-e2e/src/: decorators.py  helpers.py  pipeline_runner.py
contract-tests-e2e/tests/: conftest.py  test_context.py  test_deps.py  test_inheritance.py  test_overrides.py  test_pipeline.py  test_usages.py
contract-tests-kloc-cli/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
contract-tests-kloc-cli/src/: __init__.py  decorators.py  fixture_generator.py  helpers.py  output_validator.py
contract-tests-kloc-cli/tests/: conftest.py  test_context.py  test_deps.py  test_inherit.py  test_output.py  test_overrides.py  test_owners.py  test_resolve.py  test_smoke.py  test_usages.py
contract-tests-kloc-mapper/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
contract-tests-kloc-mapper/src/: decorators.py  fixture_generator.py  sot_data.py
contract-tests-kloc-mapper/tests/: conftest.py  test_call_mapping.py  test_edge_creation.py  test_integrity.py  test_node_creation.py  test_smoke.py  test_value_mapping.py
contract-tests/src/: CallsContractTestCase.php  CallsData.php  ScipData.php
contract-tests/tests/: SmokeTest.php  bootstrap.php
docker/: Dockerfile
src/Component/: AuditableInterface.php  EmailSender.php  EmailSenderInterface.php  InventoryChecker.php  InventoryCheckerInterface.php  OrderProcessorInterface.php
src/Dto/: CreateOrderInput.php  CustomerOutput.php  OrderOutput.php
src/Entity/: Address.php  Contact.php  Customer.php  Order.php
src/Event/: OrderCreatedEvent.php  ReportGeneratedEvent.php
src/Repository/: AuditableOrderRepository.php  BaseRepositoryInterface.php  CustomerRepository.php  CustomerRepositoryInterface.php  InMemoryCustomerRepository.php  InMemoryOrderRepository.php  OrderRepository.php  OrderRepositoryInterface.php  VersionedOrderRepository.php  VersionedOrderRepositoryInterface.php
src/Service/: AbstractOrderProcessor.php  AuditService.php  CustomerService.php  LoggingOrderProcessor.php  NotificationService.php  OrderService.php  (+8 more)
(+61 files in other folders)
