[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-tests-kloc-cli"
version = "0.1.0"
description = "Contract tests for kloc-cli query commands"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-json-report>=1.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "smoke: Smoke tests",
    "resolve: Resolve command tests",
    "usages: Usages command tests",
    "deps: Deps command tests",
    "context: Context command tests",
    "owners: Owners command tests",
    "inherit: Inherit command tests",
    "overrides: Overrides command tests",
]

[tool.ruff]
line-length = 100
target-version = "py312"
